# ProBasketball

./: README.md  pyproject.toml
ProBasketball/: manage.py
ProBasketball/ProBasketball/: asgi.py  settings.py  wsgi.py
ProBasketball/main/: urls.py  views.py
ProBasketball/main/static/css/: main.css
ProBasketball/main/templates/main/: about.html  index.html  layout.html
ProBasketball/news/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
ProBasketball/news/migrations/: 0001_initial.py
ProBasketball/news/templates/: 404.html
ProBasketball/news/templates/news/: article_creation.html  article_details.html  news_list.html
